fix bug : "reminder" becomes "recall"

--- a/App/MemoryRepeater.css
+++ b/App/MemoryRepeater.css
@@ -66,14 +66,14 @@
 	display: inline-block;
 }
 
-.reminderApproved
+.recallApproved
 {
 	background-color: green;
 	cursor: pointer;
 	display: inline-block;
 }
 
-.reminderIsToRepeat
+.recallIsToRepeat
 {
 	background-color: blue;
 	cursor: pointer;
