showTranslation button can hide and display again translation

--- a/App/MemoryRepeater.css
+++ b/App/MemoryRepeater.css
@@ -66,12 +66,12 @@
 
 .recallApproved
 {
-	background-color: green;
+	background-color: lightgreen;
 }
 
 .recallIsToRepeat
 {
-	background-color: blue;
+	background-color: slateblue;
 }
 
 .translationMenu
