user can downgrade recall step of 1 rank

--- a/App/MemoryRepeater.css
+++ b/App/MemoryRepeater.css
@@ -74,6 +74,11 @@
 	background-color: slateblue;
 }
 
+.recallIsToDownGrade 
+{
+    background-color: aqua;
+}
+
 .translationMenu
 {
 	margin: 5px;
