--- a/App/MemoryRepeater.css
+++ b/App/MemoryRepeater.css
@@ -21,6 +21,22 @@
 	
 }
 
+#greyLayerOnPage
+{
+	position: absolute;
+	z-index: 1;
+	background-color: rgba(0,0,0,0.1); 
+	height: 100%;
+	width: 100%;
+	display: none; 
+}
+
+#greyLayerOnPage img {	
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
 .wordReminder
 {	
 	width: 40%; 
